--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,8 @@ header select {
 .hero-box img {
   -o-object-position: right;
      object-position: right;
+  width: 100%;
+  height: 100%;
 }
 @media (max-width: 768px) {
   .hero-box {
